# FinancialModelingEngine

./: .gitignore  FinancialModelingEngine.py  README.md  assets.html  cashflow.html  events.csv  exteriorCashflow.csv  test.html  test_events.csv  test_exteriorCashflow.csv  test_portfolioAssets.csv
FME/: Cargo.toml  test.csv
FME/inputs/: cashflow.csv
FME/inputs/example/: cashflow.csv  events.csv  portfolio.csv
FME/src/: engine.rs  main.rs  types.rs  utils.rs
test/inputs/test2/: portfolio.csv
