[package]
name = "fme"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Financial Modeling Engine command-line program for a SBLOC-cased investment strategy."
repository = "https://github.com/ZachWunder/FinancialModelingEngine"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
