[package]
name = "fme"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A command-line program for modeling a SBLOC-based investment strategy."
repository = "https://github.com/ZachWunder/FinancialModelingEngine"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
